# fxv-api-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: common.rs
src/tools/: mock_data_generator.rs
src/v1/: client.rs  mock_client.rs  mod.rs  model.rs
src/v1/test_data/: lyra.json
