[package]
name = "fxv-api"
version = "0.1.0"
edition = "2024"
description = "Public API and types for working with FlexVault"
license = "MIT"
repository = "https://github.com/FlexVaultSCM/fxv-api-rs"

[features]
default = ["mock_client", "serde"]
mock_client = ["dep:tokio","dep:serde", "dep:rand"]
serde = ["dep:serde"]

[dependencies]
thiserror = "2.0.17"

# Mock client dependencies
serde = { version = "1.0.228", features = ["derive"], optional = true }
tokio = { version = "1.48.0", features = ["fs", "time"], optional = true }
rand = { version = "0.9.2", optional = true }

[dev-dependencies]
# These are really only needed for the mock client tests, but we don't bother feature gating them separately
tokio = { version = "1.48.0", features = ["fs", "time", "rt", "macros"] }
serde_json = "1.0.145"
