[package]
name = "fxv-api"
version = "0.1.0"
edition = "2024"
description = "Public API and types for working with FlexVault"
license = "MIT"
repository = "https://github.com/FlexVaultSCM/fxv-api-rs"

[features]
default = ["mock_client", "mock_data_generator", "serde"]
mock_client = ["dep:tokio","dep:serde", "dep:serde_json", "dep:rand", "enumset/serde", "tokio/fs", "tokio/time", "tokio/rt", "tokio/macros"]
mock_data_generator = ["mock_client", "serde", "dep:argh", "dep:walkdir" ]
serde = ["dep:serde", "enumset/serde"]

[dependencies]
thiserror = "2.0.17"
enumset = "1.1.10"

# Mock client dependencies
serde = { version = "1.0.228", features = ["derive"], optional = true }
tokio = { version = "1.48.0", features = ["fs", "time"], optional = true }
rand = { version = "0.9.2", optional = true }
serde_json = { version = "1.0.145", optional = true }

# Mock data generator dependencies
walkdir = { version = "2.5.0", optional = true }
argh = { version = "0.1.13", optional = true }

[[bin]]
name = "mock_data_generator"
path = "src/tools/mock_data_generator.rs"
required-features = ["mock_data_generator"]
